// Copyright 2025 Cisco Systems, Inc. and its affiliates
// SPDX-License-Identifier: Apache-2.0

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package outshift.identity.service.v1alpha1;

import "google/protobuf/timestamp.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/outshift/identity-service/api/server/outshift/identity/service/v1alpha1;identity_service_sdk_go";

// Identity Service Policy.
message Policy {
  // A unique identifier for the Policy.
  optional string id = 1;

  // A human-readable name for the Policy.
  optional string name = 2;

  // A human-readable description for the Policy.
  optional string description = 3;

  // The requester application that this Policy applies to.
  optional string assigned_to = 4;

  // All the rules that apply to this Policy.
  repeated Rule rules = 5;

  // CreatedAt records the timestamp of when the Policy was initially created
  optional .google.protobuf.Timestamp created_at = 6;

  // UpdatedAt records the timestamp of the last update to the Policy
  optional .google.protobuf.Timestamp updated_at = 7;
}

// Identity Service Policy Rule
message Rule {
  // A unique identifier for the Rule.
  optional string id = 1;

  // A human-readable name for the Rule.
  optional string name = 2;

  // A human-readable description for the Rule.
  optional string description = 3;

  optional string policy_id = 4;

  // The tasks that this Rule applies to.
  repeated Task tasks = 5;

  // The action applied for the rule when calling the specified tasks
  optional RuleAction action = 6;

  // Need User Approval for this Rule.
  optional bool needs_approval = 7;

  // CreatedAt records the timestamp of when the Rule was initially created
  optional .google.protobuf.Timestamp created_at = 8;

  // UpdatedAt records the timestamp of the last update to the Rule
  optional .google.protobuf.Timestamp updated_at = 9;
}

// Identity Service Policy Task
message Task {
  // A unique identifier for the Task.
  optional string id = 1;

  // A human-readable name for the Task.
  optional string name = 2;

  // A human-readable description for the Task.
  optional string description = 3;

  // An application ID for the Task.
  optional string app_id = 4;

  // A tool name for the Task.
  optional string tool_name = 5;
}

enum RuleAction {
  RULE_ACTION_UNSPECIFIED = 0;
  RULE_ACTION_ALLOW = 1;
  RULE_ACTION_DENY = 2;
}
